add splashFragment for show each marker in map at first launch the app

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_alignParentRight="true"
         android:layout_margin="16dp"
         android:clickable="true"
-        android:src="@drawable/gb1"/>
+        android:src="@drawable/gb1"
+        android:visibility="invisible"/>
 
 </RelativeLayout>
