fix fab and add sorting method

--- a/app/src/main/res/layout/fragment_bengkel.xml
+++ b/app/src/main/res/layout/fragment_bengkel.xml
@@ -13,4 +13,12 @@
         android:layout_margin="10dp">
     </ListView>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_bengkel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:src="@drawable/gb2"/>
+
 </FrameLayout>
