--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.efpro.bengkelmotor_01.SplashFragment">
+    tools:context="com.efpro.bengkelmotor_01.Fragment.SplashFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <ImageView
