--- a/app/src/main/res/layout/activity_add_bengkel.xml
+++ b/app/src/main/res/layout/activity_add_bengkel.xml
@@ -22,8 +22,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="8dp">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -40,8 +39,8 @@
                     android:layout_width="0dp"
                     android:layout_weight="7"
                     android:layout_height="wrap_content"
-                    android:hint="Nama Bengkel"
-                    android:focusable="false"/>
+                    android:hint="Nama Bengkel"/>
+
             </LinearLayout>
 
             <LinearLayout
@@ -59,8 +58,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="7"
                     android:layout_height="wrap_content"
-                    android:hint="Alamat Bengkel"
-                    android:focusable="false"/>
+                    android:hint="Alamat Bengkel"/>
             </LinearLayout>
 
             <LinearLayout
@@ -78,8 +76,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="7"
                     android:layout_height="wrap_content"
-                    android:hint="No Telepon Bengkel"
-                    android:focusable="false"/>
+                    android:hint="No Telepon Bengkel"/>
             </LinearLayout>
 
 
@@ -93,11 +90,6 @@
             android:layout_marginTop="20dp"
             android:layout_gravity="center_horizontal"
             android:text="JAM BUKA" />
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_margin="8dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -470,7 +462,6 @@
                 </LinearLayout>
 
             </LinearLayout>
-        </ScrollView>
 
 
         <Button
