--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/mapFragLayout"
     tools:context="com.efpro.bengkelmotor_01.Fragment.MapFragment">
 
     <!--&lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;-->
@@ -24,7 +25,8 @@
         android:id="@+id/fab_map"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_above="@+id/cdvBengkelBottom"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="16dp"
@@ -80,6 +82,7 @@
         app:cardCornerRadius="2dp"
         app:cardElevation="2dp"
         android:background="@android:color/white"
+        android:visibility="gone"
         >
 
         <RelativeLayout
