--- a/app/src/main/res/layout/activity_detail_bengkel.xml
+++ b/app/src/main/res/layout/activity_detail_bengkel.xml
@@ -99,15 +99,6 @@
             app:cardCornerRadius="2dp"
             app:cardElevation="2dp">
 
-            <ImageButton
-                android:id="@+id/btnMenuReview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="?android:attr/actionOverflowButtonStyle"
-                android:layout_gravity="right"
-                android:visibility="gone"
-                android:onClick="showPopup"/>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -126,14 +117,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="Nama Profile"
-                    android:textSize="18dp"
-                    android:visibility="gone"/>
-                <TextView
-                    android:id="@+id/txtPostDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Rate this app"
-                    android:layout_gravity="center"/>
+                    android:textSize="18dp" />
                 <RatingBar
                     android:id="@+id/rtbMyRate"
                     android:layout_width="wrap_content"
@@ -145,26 +129,12 @@
                     android:layout_height="wrap_content"
                     android:textAlignment="center"
                     android:layout_margin="8dp"
-                    android:text="@string/sample"
-                    android:visibility="gone"/>
-                <EditText
-                    android:id="@+id/edtReview"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Tuliskan ulasan singkat anda"
-                    android:layout_margin="8dp"/>
-                <Button
-                    android:id="@+id/btnSubmit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:layout_gravity="right"
-                    android:backgroundTint="@color/cardview_light_background"
-                    android:text="SUBMIT"/>
+                    android:text="@string/sample"/>
 
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
+
 
         <android.support.v7.widget.CardView
             android:id="@+id/cdvReviewBengkel"
@@ -175,18 +145,16 @@
             app:cardCornerRadius="2dp"
             app:cardElevation="2dp">
 
-            <com.efpro.bengkelmotor_01.ExpandableHeightListView
+            <ListView
                 android:id="@+id/reviewListView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-            </com.efpro.bengkelmotor_01.ExpandableHeightListView>
+            </ListView>
 
         </android.support.v7.widget.CardView>
 
     </LinearLayout>
 
     </ScrollView>
-
-
 
 </android.support.design.widget.CoordinatorLayout>
