--- a/app/src/main/res/layout/activity_detail_bengkel.xml
+++ b/app/src/main/res/layout/activity_detail_bengkel.xml
@@ -104,6 +104,15 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <ImageButton
+                    android:id="@+id/btnMenuReview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="?android:attr/actionOverflowButtonStyle"
+                    android:layout_gravity="right"
+                    android:visibility="gone"
+                    android:onClick="showPopup"/>
+
                 <ImageView
                     android:id="@+id/imgMyProfile"
                     android:layout_width="70dp"
@@ -117,19 +126,46 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="Nama Profile"
-                    android:textSize="18dp" />
+                    android:textSize="18dp"
+                    android:visibility="gone"/>
+
+                <TextView
+                    android:id="@+id/txtPostDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Nilai bengkel ini"
+                    android:layout_gravity="center"
+                    />
                 <RatingBar
                     android:id="@+id/rtbMyRate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:stepSize="1"
+                    android:theme="@style/RatingBar"/>
                 <TextView
                     android:id="@+id/txtMyComment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAlignment="center"
                     android:layout_margin="8dp"
-                    android:text="@string/sample"/>
+                    android:text="@string/sample"
+                    android:visibility="gone"/>
+
+                <EditText
+                    android:id="@+id/edtReview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Tuliskan ulasan singkat anda"
+                    android:layout_margin="8dp"/>
+                <Button
+                    android:id="@+id/btnSubmit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:layout_gravity="right"
+                    android:backgroundTint="@color/cardview_light_background"
+                    android:text="SUBMIT"/>
 
             </LinearLayout>
 
@@ -145,11 +181,11 @@
             app:cardCornerRadius="2dp"
             app:cardElevation="2dp">
 
-            <ListView
+            <com.efpro.bengkelmotor_01.ExpandableHeightListView
                 android:id="@+id/reviewListView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-            </ListView>
+            </com.efpro.bengkelmotor_01.ExpandableHeightListView>
 
         </android.support.v7.widget.CardView>
 
