--- a/app/src/main/res/layout/fragment_my_review.xml
+++ b/app/src/main/res/layout/fragment_my_review.xml
@@ -4,10 +4,9 @@
     android:layout_height="match_parent"
     tools:context="com.efpro.bengkelmotor_01.Fragment.MyReviewFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/reviewListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:layout_height="wrap_content">
+    </ListView>
 </FrameLayout>
