--- a/app/src/main/res/layout/activity_detail_bengkel.xml
+++ b/app/src/main/res/layout/activity_detail_bengkel.xml
@@ -24,7 +24,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
 
         <android.support.v7.widget.CardView
